--- a/P009569.opf/meta.yml
+++ b/P009569.opf/meta.yml
@@ -1,8 +1,8 @@
-id: opecha:P009569
+id: P009569
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W2PD14769
   title: "རྣམ་དག་བདེ་ཆེན་ཞིང་གི་སྨོན་ལམ་གྱི་འབྱེད་འགྲེལ་བདེ་ཆེན་ཞིང་དུ་བགྲོད་པའི་ཐེམ་སྐས་བཟང་པོ།\
     \ \n"
-  volume: ''
   author: ''
+  volumes: {}
