volumes of meta updated

--- a/P009569.opf/meta.yml
+++ b/P009569.opf/meta.yml
@@ -5,4 +5,9 @@ source_metadata:
   title: "རྣམ་དག་བདེ་ཆེན་ཞིང་གི་སྨོན་ལམ་གྱི་འབྱེད་འགྲེལ་བདེ་ཆེན་ཞིང་དུ་བགྲོད་པའི་ཐེམ་སྐས་བཟང་པོ།\
     \ \n"
   author: ''
-  volumes: {}
+  volumes:
+    0d0a064ddd2143f8930ba04f378c9ece:
+      image_group_id: I4PD936
+      title: ''
+      volume_number: 1
+      total_pages: 206
