--- a/P009569.opf/layers/v001/Pagination.yml
+++ b/P009569.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: adee419b85a3412c96affb57243926ef
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   c9e0de1065264662b59691f938c730a6:
