--- a/P009569.opf/meta.yml
+++ b/P009569.opf/meta.yml
@@ -1,11 +1,11 @@
 id: P009569
 initial_creation_type: ocr
 created_at: 29/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-19 20:38:34.506520
 source_metadata:
   id: bdr:W2PD14769
-  title: "རྣམ་དག་བདེ་ཆེན་ཞིང་གི་སྨོན་ལམ་གྱི་འབྱེད་འགྲེལ་བདེ་ཆེན་ཞིང་དུ་བགྲོད་པའི་ཐེམ་སྐས་བཟང་པོ།
-    \n"
+  title: "རྣམ་དག་བདེ་ཆེན་ཞིང་གི་སྨོན་ལམ་གྱི་འབྱེད་འགྲེལ་བདེ་ཆེན་ཞིང་དུ་བགྲོད་པའི་ཐེམ་སྐས་བཟང་པོ།\
+    \ \n"
   author: ''
   volumes:
     0d0a064ddd2143f8930ba04f378c9ece:
@@ -14,3 +14,5 @@ source_metadata:
       volume_number: 1
       total_pages: 206
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
